tests/parse_print/parsing01/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/parsing01/parsing01.essence:3:14:
unexpected end of input
expecting domain
    given g : int(
              ^^^^^^^